# housing_dpe

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
.devcontainer/: devcontainer.json
config/: params.yaml
latex/: main.tex  paper template.tex
outputs/: data_processed.csv
outputs/logs/: run_metadata.json
outputs/tables/: regression.csv  regression.tex
src/housing_dpe/: __init__.py  cli.py  pipeline.py  validate.py
tests/: test_smoke.py
