[project]
name = "housing-dpe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "duckdb>=1.4.4",
    "geopandas>=1.1.2",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pandas-datareader>=0.10.0",
    "pandera>=0.29.0",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pyogrio>=0.12.1",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "ruff>=0.15.1",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "statsmodels>=0.14.6",
    "yfinance>=1.2.0",
]

[project.scripts]
housing-dpe = "housing_dpe:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
